--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/quarterto/Dram",
   "devDependencies": {
     "LiveScript": "^1.2.0",
+    "expect.js": "^0.3.1",
     "mocha": "^1.20.1"
   },
   "dependencies": {
